# mUkz

./: .gitignore  01_BUSINESS_CHARTER.md  02_RISK_CONSTITUTION.md  03_A_PLUS_SETUP_PLAYBOOK.md  04_DAILY_OPERATING_ROUTINE.md  05_TRADE_JOURNAL_TEMPLATE.csv  05_TRADE_JOURNAL_TEMPLATE.md  06_AGENT_ROLES.md  BLUEPRINT.md  CLAUDE.md  COUNCIL.md  DESIGN.md  README.md  app.js  index.html  pyproject.toml  requirements.txt  spring_at_val.pine  styles.css  volume_profile_big_opportunity_engine.pine
.claude/commands/: markov-hedge-fund-method.md
.claude/hooks/: session-start.sh
PROP_FARM_ENGINE/: README.md
PROP_FARM_ENGINE/automation/: automation_roadmap.md  execution_safety_rules.md  pseudocode.md  signal_detection_logic.md  tradingview_indicator_logic.md
PROP_FARM_ENGINE/checklists/: a_plus_setup_checklist.md  premarket_checklist.md
PROP_FARM_ENGINE/journal/: daily_trade_journal.md  setup_review_template.md  weekly_performance_review.md
PROP_FARM_ENGINE/market_context/: daily_bias_engine.md  es_vs_nq_personality.md  market_regime_filter.md
PROP_FARM_ENGINE/order_flow/: order_flow_confirmation_engine.md  orderflow_rules_per_setup.md
PROP_FARM_ENGINE/playbook/: _playbook_overview.md  (+5 more)
apps/quant/: .env.example  pyproject.toml
apps/quant/app/: classifier.py  main.py  schemas.py  scoring.py
apps/quant/tests/: test_classifier.py  test_scoring.py
config/: scanner.yaml
scripts/: markov_hedge_fund_method.py
tests/: conftest.py  test_indicators.py  test_options_engine.py  test_ranking_engine.py  test_runner.py  test_sector_engine.py  test_stock_engine.py
(+41 files in other folders)
